renamed it r.jpg.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="point p0">
                     <div class="about_point">
                         <h3>Остановка в дороге</h3>
-                        <img src="Foto/r.jpg">
+                        <img src="./Foto\stop_road.jpg">
                         <!-- <div>Остановка</div> -->
                     </div>
                 </div>
