--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                 <div class="point p0">
                     <div class="about_point">
                         <h3>Остановка в дороге</h3>
-                        <img src="./Foto\stop_road.jpg">
+                        <img src="./Foto/stop_road.jpg">
                         <!-- <div>Остановка</div> -->
                     </div>
                 </div>
                 <div class="point p3">
                     <div class="about_point">
                         <h3>гора Паасонвуори</h3>
-                        <img src="Foto\P3_paasonwuori.jpg">
+                        <img src="./Foto/P3_paasonwuori.jpg">
                         <a href="#p3" class="ui-link">Подробнее</a>
                     </div>
                 </div>
