fixed *.JPG -> *.jpg

--- a/beauty.html
+++ b/beauty.html
@@ -60,7 +60,7 @@
                 <div class="point p4">
                     <div class="about_point" id="p4-harlu">
                         <h3>Пороги (гэс) <br/> в деревне Харлу</h3>
-                        <img src="Foto\P4_harlu.JPG">
+                        <img src="Foto\P4_harlu.jpg">
                         <a href="#p4" class="ui-link">Подробнее</a>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                 <div class="point p7">
                     <div class="about_point" id="p7-rl">
                         <h3>Финская железная дорога в скалах</h3>
-                        <img src="Foto\P7_rl.JPG">
+                        <img src="Foto\P7_rl.jpg">
                         <a href="#p7" class="ui-link">Подробнее</a>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                 <div class="point p9">
                     <div class="about_point" id="p9-boat">
                         <h3>Прогулка на лодке по Ладожским шхерам</h3>
-                        <img src="Foto\P9_boat-1.JPG">
+                        <img src="Foto\P9_boat-1.jpg">
                         <a href="#p9" class="ui-link">Подробнее</a>
                     </div>
                 </div>
