--- a/gallery.html
+++ b/gallery.html
@@ -135,15 +135,15 @@
 				</div>
 
 				<div class="carousel-item">
-					<img src="Foto\P3_paasonwuori-1.JPG"" alt=" гора Паасонвуори ">
+					<img src="Foto\P3_paasonwuori-1.jpg"" alt=" гора Паасонвуори ">
 				</div>
 
 				<div class=" carousel-item">
-					<img src="Foto\P3_paasonwuori-2.JPG"" alt=" гора Паасонвуори ">
+					<img src="Foto\P3_paasonwuori-2.jpg"" alt=" гора Паасонвуори ">
 				</div>
 
 				<div class=" carousel-item">
-					<img src="Foto\P3_paasonwuori-3.JPG"" alt=" гора Паасонвуори ">
+					<img src="Foto\P3_paasonwuori-3.jpg"" alt=" гора Паасонвуори ">
 				</div>
 
 				<div class="carousel-item">
