--- a/gallery.html
+++ b/gallery.html
@@ -242,7 +242,7 @@
 				</div>
 
 				<div class=" carousel-item">
-					<img src="Foto\P11_island-3-720_ 540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+					<img src="Foto\P11_island-3_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
 				</div>
 				<div class=" carousel-item">
 					<img src="Foto\P11_island-4_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
