4-th commit, added the work of the gadget

--- a/beauty.html
+++ b/beauty.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Достопримечательности карелии</title>
-    <meta name="keywords" content="На машине вокруг Ладожского озера, достопримечательности">
-    <meta name="descriptin" content="Ладожское, озеро">
+    <meta name="keywords" content="На машине вокруг Ладожского озера, достопримечательности, https://youtu.be/t42-71RpRgI">
+    <meta name="descriptin" content="Ладожское, озеро, https://youtu.be/t42-71RpRgI">
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
@@ -19,19 +19,26 @@
 					<h2>17- 20 Августа 2020 года</h2>
 				</div>
 			</div>
+            
+            <button type="button" class="burger"><a href="#menuHead"></a>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
 			<div  class="menubar">
-				<ul class="menu">
-					<li><a href="index.html">Главная</a></li>
+				<ul class="menu" style="z-index: 2000;">
+					<li ><a href="index.html">Главная</a></li>
 					<li class="selected"><a href="beauty.html">Красоты</a></li>
-					<li><a href="gallery.html">Галерея</a></li>
-					<li><a href="mymaps.html">Карта</a></li>
+					<li class="gallery" id="selectid-gallery"><a href="gallery.html">Галерея</a></li>
+					<li ><a href="mymaps.html">Карта</a></li>
 				</ul>
 			</div>
 		</div>
 
-        <div class="site_content_beauty">
+        <div class="site_content_beauty zIndexBackground">
             <div class="maps">
-                <img src="assets/img/beauty_Ladoga_963x908-1.jpg" />
+                <img id="maps-ladoga" src="assets/img/beauty_Ladoga_963x908-1.jpg" />
 
                 <div class="point p1"> 
                     <div class="about_point">
@@ -363,7 +370,7 @@
                 </div>
                 <div class="carousel-item">
                     <!-- <img src="assets\img\lyask.png" -->
-                    <img src="Foto\P6_hidenwuori-1_720 _540.jpg" alt="Гора Хинденвуори">
+                    <img src="Foto\P6_hidenwuori-1_720_540.jpg" alt="Гора Хинденвуори">
                 </div>
                 <div class="carousel-item">
                     <!-- <img src="assets\img\lyask.png" -->
@@ -506,7 +513,7 @@
                     <img src="Foto\P11_island-2_720_540.jpg" alt="Скала «Импилахти»">
                 </div>
                 <div class="carousel-item">
-                    <img src="Foto\P11_island-3_720_ 540.jpg" alt="Скала «Импилахти»">
+                    <img src="Foto\P11_island-3_720_540.jpg" alt="Скала «Импилахти»">
                 </div>
                 <div class="carousel-item">
                     <img src="Foto\P11_island-4_720_540.jpg" alt="Скала «Импилахти»">
@@ -585,7 +592,7 @@
         <div class="carousel-inner">
             <div class="carousel-slides">
                 <div class="carousel-item">
-                    <img src="Foto\P14_lower-koirinoya_720_540.jpg" alt="Водопад Нижний Койриноя">
+                    <img src="Foto\P14_lower-koirinoya_720_540.jpg" alt="Водопад Нижний Койриноя https://youtu.be/t42-71RpRgI">
                 </div>
             </div>
         </div>
