--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,34 +10,42 @@
     <meta name="descriptin" content="Ладожское, озеро">
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
+
 <body>
     <div class="main">
-		<!--Верстка Hedera -->
-		<div class="header">
-			<div class="logo">
-				<div class="logo_text">
-					<h1><a href="/">Вокруг Ладожского озера</a></h1>
-					<h2>17- 20 Августа 2020 года</h2>
-				</div>
-			</div>
-			<div  class="menubar">
-				<ul class="menu">
-					<li><a href="index.html">Главная</a></li>
-					<li><a href="beauty.html">Красоты</a></li>
-					<li class="selected"><a href="#gallery">Галерея</a></li>
-					<li><a href="mymaps.html">Карта</a></li>
-				</ul>
-			</div>
-		</div>
+        <!--Верстка Hedera -->
+        <div class="header">
+            <div class="logo">
+                <div class="logo_text">
+                    <h1><a href="/">Вокруг Ладожского озера</a></h1>
+                    <h2>17- 20 Августа 2020 года (pасстояние  810 км)</h2>
+                </div>
+            </div>
+
+            <button type="button" class="burger"><a href="#menuHead"></a>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <div class="menubar" >
+                <ul class="menu" style="z-index: 2000;">
+                    <li ><a href="index.html">Главная</a></li>
+                    <li ><a href="beauty.html">Красоты</a></li>
+                    <li class="selected gallery" id="selectid-gallery"><a href="#gallery">Галерея</a></li>
+                    <li><a href="mymaps.html">Карта</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 
-	<div class="maps" style="display: none;">
+    <div class="maps" id="maps-ladoga" style="display: none;">
 
-	</div>
+    </div>
 
-	<div class="carousel" id="gallery">
+    <div class="carousel carousel-gallery zIndexBackground" id="gallery-media">
         <ol class="carousel-indicators">
-			<li class="active" data-slide-to="0"></li>
+            <li class="active" data-slide-to="0"></li>
             <li data-slide-to="1"></li>
             <li data-slide-to="2"></li>
             <li data-slide-to="3"></li>
@@ -90,7 +99,7 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-slides">
-				<div class="carousel-item">
+                <div class="carousel-item">
                     <img src="Foto\P1_ruskeala_720_540.jpg" alt="Парк Рускеала">
                 </div>
 
@@ -110,93 +119,89 @@
                     <img src="Foto\P1_ruskeala-4_720_540.jpg" alt=" гора Паасонвуори ">
                 </div>
 
-				<div class="carousel-item">
-					<img src="Foto\P2_film_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
-				</div>
+                <div class="carousel-item">
+                    <img src="Foto\P2_film_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
+                </div>
 
-				<div class="carousel-item">
-					<img src="Foto\P2_film-1_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
-				</div>
+                <div class="carousel-item">
+                    <img src="Foto\P2_film-1_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
+                </div>
 
-				<div class=" carousel-item">
-					<img src="Foto\P2_film-2_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
-				</div>
+                <div class=" carousel-item">
+                    <img src="Foto\P2_film-2_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
+                </div>
 
-				<div class=" carousel-item">
-					<img src="Foto\P2_film-3_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
-				</div>
+                <div class=" carousel-item">
+                    <img src="Foto\P2_film-3_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
+                </div>
 
-				<div class=" carousel-item">
-					<img src="Foto\P2_film-4_720_540.jpg" alt=" гора Паасонвуори ">
-				</div>
+                <div class=" carousel-item">
+                    <img src="Foto\P2_film-4_720_540.jpg" alt=" гора Паасонвуори ">
+                </div>
 
-				<div class="carousel-item">
-					<img src="Foto\P3_paasonwuori.jpg" alt="гора Паасонвуори ">
-				</div>
+                <div class="carousel-item">
+                    <img src="Foto\P3_paasonwuori.jpg" alt="гора Паасонвуори ">
+                </div>
 
-				<div class="carousel-item">
-					<img src="Foto\P3_paasonwuori-1.jpg"" alt=" гора Паасонвуори ">
-				</div>
-
-				<div class=" carousel-item">
-					<img src="Foto\P3_paasonwuori-2.jpg"" alt=" гора Паасонвуори ">
+                <div class="carousel-item">
+                    <img src="Foto\P3_paasonwuori-1.jpg"" alt=" гора Паасонвуори ">
 				</div>
 
 				<div class=" carousel-item">
-					<img src="Foto\P3_paasonwuori-3.jpg"" alt=" гора Паасонвуори ">
+                    <img src="Foto\P3_paasonwuori-2.jpg"" alt=" гора Паасонвуори ">
 				</div>
 
-				<div class="carousel-item">
+				<div class=" carousel-item">
+                    <img src="Foto\P3_paasonwuori-3.jpg"" alt=" гора Паасонвуори ">
+				</div>
+
+				<div class=" carousel-item">
                     <img src="Foto\P4_harlu.jpg" alt="Пороги (гэс) в деревне Харлуи">
                 </div>
 
-				<div class="carousel-item">
-					<img src="Foto\P5_hotel_720_432.jpg" alt="посёлок Ляскеля">
-				</div>
+                <div class="carousel-item">
+                    <img src="Foto\P5_hotel_720_432.jpg" alt="посёлок Ляскеля">
+                </div>
 
-				<div class="carousel-item">
-					<img src="Foto\P5_hotel-1.jpg" alt=" посёлок Ляскеля">
-				</div>
+                <div class="carousel-item">
+                    <img src="Foto\P5_hotel-1.jpg" alt=" посёлок Ляскеля">
+                </div>
 
-				<div class=" carousel-item">
-					<img src="Foto\P5_hotel-2.jpg" alt=" посёлок Ляскеля">
-				</div>
+                <div class=" carousel-item">
+                    <img src="Foto\P5_hotel-2.jpg" alt=" посёлок Ляскеля">
+                </div>
 
-				<div class=" carousel-item">
-					<img src="Foto\P5_hotel-3.jpg" alt=" посёлок Ляскеля">
-				</div>
+                <div class=" carousel-item">
+                    <img src="Foto\P5_hotel-3.jpg" alt=" посёлок Ляскеля">
+                </div>
 
-				<div class="carousel-item">
-                    <!-- <img src="assets\img\lyask.png" -->
+                <div class="carousel-item">
                     <img src="Foto\P5.1_lyask_720_540.jpg" alt="ГЭС посёлок Ляскеля">
                 </div>
                 <div class="carousel-item">
-                    <!-- <img src="assets\img\lyask.png" -->
                     <img src="Foto\P5.1_lyask-1_720_540.jpg" alt="ГЭС посёлок Ляскеля">
                 </div>
                 <div class="carousel-item">
-                    <!-- <img src="assets\img\lyask.png" -->
                     <img src="Foto\P5.1_lyask-2_720_540.jpg" alt="ГЭС посёлок Ляскеля">
                 </div>
 
-				<div class="carousel-item">
-					<img src="Foto\P11_island_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
-				</div>
-				
-				<div class="carousel-item">
-					<img src="Foto\P11_island-1_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
-				</div>
+                <div class="carousel-item">
+                    <img src="Foto\P11_island_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                </div>
 
                 <div class="carousel-item">
-                    <!-- <img src="assets\img\lyask.png" -->
+                    <img src="Foto\P11_island-1_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                </div>
+
+                <div class="carousel-item">
                     <img src="Foto\P6_hidenwuori_720_540.jpg" alt="Гора Хинденвуори">
                 </div>
                 <div class="carousel-item">
-                    <!-- <img src="assets\img\lyask.png" -->
-                    <img src="Foto\P6_hidenwuori-1_720 _540.jpg" alt="Гора Хинденвуори">
+                    <img src="Foto\P6_hidenwuori-1_720_540.jpg" alt="Гора Хинденвуори">
                 </div>
                 <div class="carousel-item">
-                    <!-- <img src="assets\img\lyask.png" -->
                     <img src="Foto\P6_hidenwuori-2.jpg" alt="Гора Хинденвуори">
                 </div>
 
@@ -208,21 +213,26 @@
                     <img src="Foto\P8_Impilahti_720_540.jpg" alt="остановка в поселке Импилахти">
                 </div>
 
-				<div class="carousel-item">
+                <div class="carousel-item">
                     <img src="Foto\P9_boat.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P9_boat-1.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P9_boat-2.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P9_boat-3.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P9_boat-4.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P9_boat-5.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
@@ -230,63 +240,82 @@
                 <div class="carousel-item">
                     <img src="Foto\P10_rock-Impilahti_720_540.jpg" alt="Скала «Импилахти»">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P10_rock-Impilahti-1_720-540.jpg" alt="Скала «Импилахти»">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P10_rock-Impilahti-2_720_540.jpg" alt="Скала «Импилахти»">
                 </div>
 
-				<div class=" carousel-item">
-					<img src="Foto\P11_island-2_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
-				</div>
+                <div class=" carousel-item">
+                    <img src="Foto\P11_island-2_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                </div>
 
-				<div class=" carousel-item">
-					<img src="Foto\P11_island-3_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
-				</div>
-				<div class=" carousel-item">
-					<img src="Foto\P11_island-4_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
-				</div>
-				<div class=" carousel-item">
-					<img src="Foto\P11_island-5_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
-				</div>
-				<div class=" carousel-item">
-					<img src="Foto\P11_island-6_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
-				</div>
+                <div class=" carousel-item">
+                    <img src="Foto\P11_island-3_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                </div>
 
-				<div class="carousel-item">
+                <div class=" carousel-item">
+
+                    <img src="Foto\P11_island-4_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                </div>
+
+                <div class=" carousel-item">
+                    <img src="Foto\P11_island-5_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                </div>
+
+                <div class=" carousel-item">
+                    <img src="Foto\P11_island-6_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                </div>
+
+                <div class="carousel-item">
                     <img src="Foto\P12_white bridges_720_540.jpg" alt="Водопад Белые мосты">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P12_white bridges-1_720_540.jpg" alt="Водопад Белые мосты">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P12_white bridges-2.jpg" alt="Водопад Белые мосты">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P13_up-koirinoya_720_540.jpg" alt="Водопад Верхний Койриноя">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P13_up-koirinoya-1_720_540.jpg" alt="Водопад Верхний Койриноя">
                 </div>
+
                 <div class="carousel-item">
                     <img src="Foto\P14_lower-koirinoya_720_540.jpg" alt="Водопад Нижний Койриноя">
                 </div>
 
-				<div class="carousel-item">
-					<img src="Foto\P15_vidlici_720_540.jpg" alt="село Видлица">
-				</div>
-				<div class="carousel-item">
-					<img src="Foto\P15_vidlici-1_720_540.jpg" alt="село Видлица">
-				</div>
+                <div class="carousel-item">
+                    <img src="Foto\P15_vidlici_720_540.jpg" alt="село Видлица">
+                </div>
 
+                <div class="carousel-item">
+                    <img src="Foto\P15_vidlici-1_720_540.jpg" alt="село Видлица">
+                </div>
+
+            </div>
+            <a href="#" class="carousel-prev" data-slide="prev"><span id="cboxPrevious"> </span></a>
+            <a href="#" class="carousel-next" data-slide="next"><span id="cboxNext"> </span></a>
+            <a href="#" class="carousel-close-cboxClose" data-slide="close"><span id="cboxClose"> </span></a>
         </div>
-        <a href="#" class="carousel-prev" data-slide="prev"><span id="cboxPrevious"> </span></a>
-        <a href="#" class="carousel-next" data-slide="next"><span id="cboxNext"> </span></a>
-        <!-- <a href="#" class="carousel-close" data-slide="close"><span id="cboxClose"> </span></a> -->
     </div>
 
-
     <script src="script.js" type="text/javascript"></script>
+
 </body>
+
 </html>
