--- a/index.html
+++ b/index.html
@@ -17,51 +17,58 @@
             <div class="logo">
                 <div class="logo_text">
                     <h1><a href="/">Вокруг Ладожского озера</a></h1>
-                    <h2>17- 20 Августа 2020 года</h2>
+                    <h2>17- 20 Августа 2020 года (pасстояние  810 км)</h2>
                 </div>
             </div>
+
+            <button type="button" class="burger"><a href="#menuHead"></a>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
             <div class="menubar">
-                <ul class="menu">
+                <ul class="menu" style="z-index: 2000;">
                     <li class="selected"><a href="index.html">Главная</a></li>
-                    <li><a href="beauty.html">Красоты</a></li>
-                    <li><a href="gallery.html">Галерея</a></li>
-                    <li><a href="mymaps.html">Карта</a></li>
+                    <li ><a href="beauty.html">Красоты</a></li>
+                    <li class="gallery" id="selectid-gallery"><a href="gallery.html">Галерея</a></li>
+                    <li ><a href="mymaps.html">Карта</a></li>
                 </ul>
             </div>
         </div>
-        <div class="site_content">
+        <div class="site_content zIndexBackground">
             <div class="maps">
-                <img src="assets/img/route_around_Ladoga_m_963x908-1.jpg" />
+                <img id="maps-ladoga" src="assets/img/route_around_Ladoga_m_963x908-1.jpg" />
                 <div class="point p0">
-                    <div class="about_point">
+                    <div class="about_point" id="p0-stop-road">
                         <h3>Остановка в дороге</h3>
-                        <img src="Foto/stop_road.jpg">
+                        <img src="Foto\stop_road.jpg">
                         <!-- <div>Остановка</div> -->
                     </div>
                 </div>
                 <div class="point p3">
-                    <div class="about_point">
+                    <div class="about_point" id="p3-paas">
                         <h3>гора Паасонвуори</h3>
-                        <img src="Foto/P3_paasonwuori.jpg">
+                        <img src="Foto\P3_paasonwuori.jpg">
                         <a href="#p3" class="ui-link">Подробнее</a>
                     </div>
                 </div>
                 <div class="point p5">
-                    <div class="about_point">
+                    <div class="about_point" id="p5-hotel">
                         <h3>Гостиница Усадьба</h3>
                         <img src="Foto\P5_hotel_720_432.jpg">
                         <a href="#p5" class="ui-link">Подробнее</a>
                     </div>
                 </div>
                 <div class="point p11">
-                    <div class="about_point">
+                    <div class="about_point" id="p11-island">
                         <h3>Остров</h3>
                         <img src="Foto\P11_island_720_540.jpg">
                         <a href="#p11" class="ui-link">Подробнее</a>
                     </div>
                 </div>
                 <div class="point p15">
-                    <div class="about_point">
+                    <div class="about_point" id="p15-vidlici">
                         <h3>Привал, село Видлица</h3>
                         <img src="Foto\P15_vidlici_720_540.jpg">
                         <a href="#p15" class="ui-link">Подробнее</a>
@@ -76,7 +83,6 @@
 
     <!-- гора Паасонвуори точка p3 -->
     <div class="carousel" id="p3">
-        <!-- <div class="carousel"> -->
         <ol class="carousel-indicators">
             <li class="active" data-slide-to="0"></li>
             <li data-slide-to="1"></li>
@@ -86,7 +92,6 @@
         <div class="carousel-inner">
             <div class="carousel-slides">
                 <div class="carousel-item">
-                    <!-- <img src="assets\img\lyask.png" -->
                     <img src="Foto\P3_paasonwuori.jpg" alt="гора Паасонвуори ">
                 </div>
 
@@ -103,7 +108,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class="carousel-prev" data-slide="prev"><span id="cboxPrevious"> </span></a>
+        <a href=" #" class="carousel-prev" data-slide="prev"><span id="cboxPrevious"> </span></a>
         <a href="#" class="carousel-next" data-slide="next"><span id="cboxNext"> </span></a>
         <a href="#" class="carousel-close" data-slide="close"><span id="cboxClose"> </span></a>
     </div>
@@ -111,7 +116,6 @@
 
     <!-- Отель точка p5 -->
     <div class="carousel" id="p5">
-        <!-- <div class="carousel"> -->
         <ol class="carousel-indicators">
             <li class="active" data-slide-to="0"></li>
             <li data-slide-to="1"></li>
@@ -158,61 +162,68 @@
         <div class="carousel-inner">
             <div class="carousel-slides">
                 <div class="carousel-item">
-                    <img src="Foto\P11_island_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                    <img src="Foto\P11_island_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
-                
+
                 <div class="carousel-item">
-                    <img src="Foto\P11_island-1_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                    <img src="Foto\P11_island-1_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="Foto\P11_island-2_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                    <img src="Foto\P11_island-2_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="Foto\P11_island-3_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                    <img src="Foto\P11_island-3_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
                 <div class=" carousel-item">
-                    <img src="Foto\P11_island-4_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                    <img src="Foto\P11_island-4_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
                 <div class=" carousel-item">
-                    <img src="Foto\P11_island-5_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                    <img src="Foto\P11_island-5_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
                 <div class=" carousel-item">
-                    <img src="Foto\P11_island-6_720_540.jpg" alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                    <img src="Foto\P11_island-6_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
             </div>
         </div>
         <a href="#" class="carousel-prev" data-slide="prev"><span id="cboxPrevious"> </span></a>
         <a href="#" class="carousel-next" data-slide="next"><span id="cboxNext"> </span></a>
         <a href="#" class="carousel-close" data-slide="close"><span id="cboxClose"> </span></a>
-        
+
     </div>
     <!-- end, Остров точка p11  -->
 
 
-        <!-- Отель точка p5 -->
-        <div class="carousel" id="p15">
-            <!-- <div class="carousel"> -->
-            <ol class="carousel-indicators">
-                <li class="active" data-slide-to="0"></li>
-                <li data-slide-to="1"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-slides">
-                    <div class="carousel-item">
-                        <img src="Foto\P15_vidlici_720_540.jpg" alt="село Видлица">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="Foto\P15_vidlici-1_720_540.jpg" alt="село Видлица">
-                    </div>
+    <!-- Отель точка p5 -->
+    <div class="carousel" id="p15">
+        <!-- <div class="carousel"> -->
+        <ol class="carousel-indicators">
+            <li class="active" data-slide-to="0"></li>
+            <li data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-slides">
+                <div class="carousel-item">
+                    <img src="Foto\P15_vidlici_720_540.jpg" alt="село Видлица">
+                </div>
+                <div class="carousel-item">
+                    <img src="Foto\P15_vidlici-1_720_540.jpg" alt="село Видлица">
                 </div>
             </div>
-            <a href="#" class="carousel-prev" data-slide="prev"><span id="cboxPrevious"> </span></a>
-            <a href="#" class="carousel-next" data-slide="next"><span id="cboxNext"> </span></a>
-            <a href="#" class="carousel-close" data-slide="close"><span id="cboxClose"> </span></a>
         </div>
-        <!-- end, Отель точка p5 -->
+        <a href="#" class="carousel-prev" data-slide="prev"><span id="cboxPrevious"> </span></a>
+        <a href="#" class="carousel-next" data-slide="next"><span id="cboxNext"> </span></a>
+        <a href="#" class="carousel-close" data-slide="close"><span id="cboxClose"> </span></a>
+    </div>
+    <!-- end, Отель точка p5 -->
 
     <script src="script.js" type="text/javascript"></script>
 
