--- a/mymaps.html
+++ b/mymaps.html
@@ -16,24 +16,39 @@
 			<div class="logo">
 				<div class="logo_text">
 					<h1><a href="/">Вокруг Ладожского озера</a></h1>
-					<h2>17- 20 Августа 2020 года</h2>
+					<h2>17- 20 Августа 2020 года (pасстояние  810 км)</h2>
 				</div>
 			</div>
+			
+			<button type="button" class="burger"><a href="#menuHead"></a>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
 			<div  class="menubar">
-				<ul class="menu">
-					<li><a href="index.html">Главyая</a></li>
-					<li><a href="beauty.html">Красоты</a></li>
-					<li><a href="gallery.html">Галерея</a></li>
+				<ul class="menu" style="z-index: 2000;">
+					<li ><a href="index.html">Главная</a></li>
+					<li ><a href="beauty.html">Красоты</a></li>
+					<li class="gallery" id="selectid-gallery"><a href="gallery.html">Галерея</a></li>
 					<li class="selected" ><a href="mymaps.html">Карта</a></li>
 				</ul>
 			</div>
 		</div>
     </div>
 
-	<div class = "mymaps">
-		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A90e5687c462a3656b4b084888558dcb6d842acfef53389603ebcce191ffc697a&amp;width=1078&amp;height=720&amp;lang=ru_RU&amp;scroll=true"></script>
-	</div>
+	<div class="maps zIndexBackground" id="maps-ladoga" style="display: none;">
 
+    </div>
+	
+	<div class = "mymaps">
+		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A90e5687c462a3656b4b084888558dcb6d842acfef53389603ebcce191ffc697a&amp;lang=ru_RU&amp;scroll=true">
+		</script>
+		<!-- <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A90e5687c462a3656b4b084888558dcb6d842acfef53389603ebcce191ffc697a&amp;width=1078&amp;height=720&amp;lang=ru_RU&amp;scroll=true"></script> -->
+		<!-- https://youtu.be/t42-71RpRgI -->
+	</div>
+	
+	<script src="script.js" type="text/javascript"></script>
 
 </body>
 </html>
