--- a/index.html
+++ b/index.html
@@ -42,35 +42,35 @@
                 <div class="point p0">
                     <div class="about_point" id="p0-stop-road">
                         <h3>Остановка в дороге</h3>
-                        <img src="Foto\stop_road.jpg">
+                        <img src="..\..\Foto\stop_road.jpg">
                         <!-- <div>Остановка</div> -->
                     </div>
                 </div>
                 <div class="point p3">
                     <div class="about_point" id="p3-paas">
                         <h3>гора Паасонвуори</h3>
-                        <img src="Foto\P3_paasonwuori.jpg">
+                        <img src="..\..\Foto\P3_paasonwuori.jpg">
                         <a href="#p3" class="ui-link">Подробнее</a>
                     </div>
                 </div>
                 <div class="point p5">
                     <div class="about_point" id="p5-hotel">
                         <h3>Гостиница Усадьба</h3>
-                        <img src="Foto\P5_hotel_720_432.jpg">
+                        <img src="..\..\Foto\P5_hotel_720_432.jpg">
                         <a href="#p5" class="ui-link">Подробнее</a>
                     </div>
                 </div>
                 <div class="point p11">
                     <div class="about_point" id="p11-island">
                         <h3>Остров</h3>
-                        <img src="Foto\P11_island_720_540.jpg">
+                        <img src="..\..\Foto\P11_island_720_540.jpg">
                         <a href="#p11" class="ui-link">Подробнее</a>
                     </div>
                 </div>
                 <div class="point p15">
                     <div class="about_point" id="p15-vidlici">
                         <h3>Привал, село Видлица</h3>
-                        <img src="Foto\P15_vidlici_720_540.jpg">
+                        <img src="..\..\Foto\P15_vidlici_720_540.jpg">
                         <a href="#p15" class="ui-link">Подробнее</a>
                     </div>
                 </div>
@@ -92,19 +92,19 @@
         <div class="carousel-inner">
             <div class="carousel-slides">
                 <div class="carousel-item">
-                    <img src="Foto\P3_paasonwuori.jpg" alt="гора Паасонвуори ">
+                    <img src="..\..\Foto\P3_paasonwuori.jpg" alt="гора Паасонвуори ">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="Foto\P3_paasonwuori-1.jpg"" alt=" гора Паасонвуори ">
+                    <img src="..\..\Foto\P3_paasonwuori-1.jpg"" alt=" гора Паасонвуори ">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="Foto\P3_paasonwuori-2.jpg"" alt=" гора Паасонвуори ">
+                    <img src="..\..\Foto\P3_paasonwuori-2.jpg"" alt=" гора Паасонвуори ">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="Foto\P3_paasonwuori-3.jpg"" alt=" гора Паасонвуори ">
+                    <img src="..\..\Foto\P3_paasonwuori-3.jpg"" alt=" гора Паасонвуори ">
                 </div>
             </div>
         </div>
@@ -125,19 +125,19 @@
         <div class="carousel-inner">
             <div class="carousel-slides">
                 <div class="carousel-item">
-                    <img src="Foto\P5_hotel_720_432.jpg" alt="посёлок Ляскеля">
+                    <img src="..\..\Foto\P5_hotel_720_432.jpg" alt="посёлок Ляскеля">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="Foto\P5_hotel-1.jpg" alt=" посёлок Ляскеля">
+                    <img src="..\..\Foto\P5_hotel-1.jpg" alt=" посёлок Ляскеля">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="Foto\P5_hotel-2.jpg" alt=" посёлок Ляскеля">
+                    <img src="..\..\Foto\P5_hotel-2.jpg" alt=" посёлок Ляскеля">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="Foto\P5_hotel-3.jpg" alt=" посёлок Ляскеля">
+                    <img src="..\..\Foto\P5_hotel-3.jpg" alt=" посёлок Ляскеля">
                 </div>
             </div>
         </div>
@@ -162,34 +162,34 @@
         <div class="carousel-inner">
             <div class="carousel-slides">
                 <div class="carousel-item">
-                    <img src="Foto\P11_island_720_540.jpg"
+                    <img src="..\..\Foto\P11_island_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="Foto\P11_island-1_720_540.jpg"
+                    <img src="..\..\Foto\P11_island-1_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="Foto\P11_island-2_720_540.jpg"
+                    <img src="..\..\Foto\P11_island-2_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="Foto\P11_island-3_720_540.jpg"
+                    <img src="..\..\Foto\P11_island-3_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
                 <div class=" carousel-item">
-                    <img src="Foto\P11_island-4_720_540.jpg"
+                    <img src="..\..\Foto\P11_island-4_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
                 <div class=" carousel-item">
-                    <img src="Foto\P11_island-5_720_540.jpg"
+                    <img src="..\..\Foto\P11_island-5_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
                 <div class=" carousel-item">
-                    <img src="Foto\P11_island-6_720_540.jpg"
+                    <img src="..\..\Foto\P11_island-6_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
             </div>
@@ -212,10 +212,10 @@
         <div class="carousel-inner">
             <div class="carousel-slides">
                 <div class="carousel-item">
-                    <img src="Foto\P15_vidlici_720_540.jpg" alt="село Видлица">
+                    <img src="..\..\Foto\P15_vidlici_720_540.jpg" alt="село Видлица">
                 </div>
                 <div class="carousel-item">
-                    <img src="Foto\P15_vidlici-1_720_540.jpg" alt="село Видлица">
+                    <img src="..\..\Foto\P15_vidlici-1_720_540.jpg" alt="село Видлица">
                 </div>
             </div>
         </div>
