6-th commit, delete  bag -> ..\.."

--- a/gallery.html
+++ b/gallery.html
@@ -100,211 +100,211 @@
         <div class="carousel-inner">
             <div class="carousel-slides">
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P1_ruskeala_720_540.jpg" alt="Парк Рускеала">
+                    <img src="Foto\P1_ruskeala_720_540.jpg" alt="Парк Рускеала">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P1_ruskeala-1_720_540.jpg" alt="Парк Рускеала">
+                    <img src="Foto\P1_ruskeala-1_720_540.jpg" alt="Парк Рускеала">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="..\..\Foto\P1_ruskeala-2_720_540.jpg" alt=" Парк Рускеала">
+                    <img src="Foto\P1_ruskeala-2_720_540.jpg" alt=" Парк Рускеала">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="..\..\Foto\P1_ruskeala-3_720_540.jpg" alt="Парк Рускеала">
+                    <img src="Foto\P1_ruskeala-3_720_540.jpg" alt="Парк Рускеала">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="..\..\Foto\P1_ruskeala-4_720_540.jpg" alt=" гора Паасонвуори ">
+                    <img src="Foto\P1_ruskeala-4_720_540.jpg" alt=" гора Паасонвуори ">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P2_film_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
+                    <img src="Foto\P2_film_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P2_film-1_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
+                    <img src="Foto\P2_film-1_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="..\..\Foto\P2_film-2_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
+                    <img src="Foto\P2_film-2_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="..\..\Foto\P2_film-3_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
+                    <img src="Foto\P2_film-3_720_540.jpg" alt="Здесь снимали фильм «…А зори здесь тихие»">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="..\..\Foto\P2_film-4_720_540.jpg" alt=" гора Паасонвуори ">
+                    <img src="Foto\P2_film-4_720_540.jpg" alt=" гора Паасонвуори ">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P3_paasonwuori.jpg" alt="гора Паасонвуори ">
+                    <img src="Foto\P3_paasonwuori.jpg" alt="гора Паасонвуори ">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P3_paasonwuori-1.jpg"" alt=" гора Паасонвуори ">
+                    <img src="Foto\P3_paasonwuori-1.jpg"" alt=" гора Паасонвуори ">
 				</div>
 
 				<div class=" carousel-item">
-                    <img src="..\..\Foto\P3_paasonwuori-2.jpg"" alt=" гора Паасонвуори ">
+                    <img src="Foto\P3_paasonwuori-2.jpg"" alt=" гора Паасонвуори ">
 				</div>
 
 				<div class=" carousel-item">
-                    <img src="..\..\Foto\P3_paasonwuori-3.jpg"" alt=" гора Паасонвуори ">
+                    <img src="Foto\P3_paasonwuori-3.jpg"" alt=" гора Паасонвуори ">
 				</div>
 
 				<div class=" carousel-item">
-                    <img src="..\..\Foto\P4_harlu.jpg" alt="Пороги (гэс) в деревне Харлуи">
+                    <img src="Foto\P4_harlu.jpg" alt="Пороги (гэс) в деревне Харлуи">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P5_hotel_720_432.jpg" alt="посёлок Ляскеля">
+                    <img src="Foto\P5_hotel_720_432.jpg" alt="посёлок Ляскеля">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P5_hotel-1.jpg" alt=" посёлок Ляскеля">
-                </div>
-
-                <div class=" carousel-item">
-                    <img src="..\..\Foto\P5_hotel-2.jpg" alt=" посёлок Ляскеля">
+                    <img src="Foto\P5_hotel-1.jpg" alt=" посёлок Ляскеля">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="..\..\Foto\P5_hotel-3.jpg" alt=" посёлок Ляскеля">
+                    <img src="Foto\P5_hotel-2.jpg" alt=" посёлок Ляскеля">
+                </div>
+
+                <div class=" carousel-item">
+                    <img src="Foto\P5_hotel-3.jpg" alt=" посёлок Ляскеля">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P5.1_lyask_720_540.jpg" alt="ГЭС посёлок Ляскеля">
+                    <img src="Foto\P5.1_lyask_720_540.jpg" alt="ГЭС посёлок Ляскеля">
                 </div>
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P5.1_lyask-1_720_540.jpg" alt="ГЭС посёлок Ляскеля">
+                    <img src="Foto\P5.1_lyask-1_720_540.jpg" alt="ГЭС посёлок Ляскеля">
                 </div>
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P5.1_lyask-2_720_540.jpg" alt="ГЭС посёлок Ляскеля">
+                    <img src="Foto\P5.1_lyask-2_720_540.jpg" alt="ГЭС посёлок Ляскеля">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P11_island_720_540.jpg"
+                    <img src="Foto\P11_island_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P11_island-1_720_540.jpg"
+                    <img src="Foto\P11_island-1_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P6_hidenwuori_720_540.jpg" alt="Гора Хинденвуори">
+                    <img src="Foto\P6_hidenwuori_720_540.jpg" alt="Гора Хинденвуори">
                 </div>
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P6_hidenwuori-1_720_540.jpg" alt="Гора Хинденвуори">
+                    <img src="Foto\P6_hidenwuori-1_720_540.jpg" alt="Гора Хинденвуори">
                 </div>
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P6_hidenwuori-2.jpg" alt="Гора Хинденвуори">
+                    <img src="Foto\P6_hidenwuori-2.jpg" alt="Гора Хинденвуори">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P7_rl.jpg" alt="Финская железная дорога в скалах">
+                    <img src="Foto\P7_rl.jpg" alt="Финская железная дорога в скалах">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P8_Impilahti_720_540.jpg" alt="остановка в поселке Импилахти">
+                    <img src="Foto\P8_Impilahti_720_540.jpg" alt="остановка в поселке Импилахти">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P9_boat.jpg" alt="Прогулка на лодке по Ладожским шхерам">
+                    <img src="Foto\P9_boat.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P9_boat-1.jpg" alt="Прогулка на лодке по Ладожским шхерам">
+                    <img src="Foto\P9_boat-1.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P9_boat-2.jpg" alt="Прогулка на лодке по Ладожским шхерам">
+                    <img src="Foto\P9_boat-2.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P9_boat-3.jpg" alt="Прогулка на лодке по Ладожским шхерам">
+                    <img src="Foto\P9_boat-3.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P9_boat-4.jpg" alt="Прогулка на лодке по Ладожским шхерам">
+                    <img src="Foto\P9_boat-4.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P9_boat-5.jpg" alt="Прогулка на лодке по Ладожским шхерам">
+                    <img src="Foto\P9_boat-5.jpg" alt="Прогулка на лодке по Ладожским шхерам">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P10_rock-Impilahti_720_540.jpg" alt="Скала «Импилахти»">
+                    <img src="Foto\P10_rock-Impilahti_720_540.jpg" alt="Скала «Импилахти»">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P10_rock-Impilahti-1_720-540.jpg" alt="Скала «Импилахти»">
+                    <img src="Foto\P10_rock-Impilahti-1_720-540.jpg" alt="Скала «Импилахти»">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P10_rock-Impilahti-2_720_540.jpg" alt="Скала «Импилахти»">
-                </div>
-
-                <div class=" carousel-item">
-                    <img src="..\..\Foto\P11_island-2_720_540.jpg"
-                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                    <img src="Foto\P10_rock-Impilahti-2_720_540.jpg" alt="Скала «Импилахти»">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="..\..\Foto\P11_island-3_720_540.jpg"
+                    <img src="Foto\P11_island-2_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
 
                 <div class=" carousel-item">
-
-                    <img src="..\..\Foto\P11_island-4_720_540.jpg"
+                    <img src="Foto\P11_island-3_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="..\..\Foto\P11_island-5_720_540.jpg"
+
+                    <img src="Foto\P11_island-4_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
 
                 <div class=" carousel-item">
-                    <img src="..\..\Foto\P11_island-6_720_540.jpg"
+                    <img src="Foto\P11_island-5_720_540.jpg"
+                        alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
+                </div>
+
+                <div class=" carousel-item">
+                    <img src="Foto\P11_island-6_720_540.jpg"
                         alt="Россия, Республика Карелия, Питкярантский район, Импилахтинское сельское поселение">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P12_white bridges_720_540.jpg" alt="Водопад Белые мосты">
+                    <img src="Foto\P12_white bridges_720_540.jpg" alt="Водопад Белые мосты">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P12_white bridges-1_720_540.jpg" alt="Водопад Белые мосты">
+                    <img src="Foto\P12_white bridges-1_720_540.jpg" alt="Водопад Белые мосты">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P12_white bridges-2.jpg" alt="Водопад Белые мосты">
+                    <img src="Foto\P12_white bridges-2.jpg" alt="Водопад Белые мосты">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P13_up-koirinoya_720_540.jpg" alt="Водопад Верхний Койриноя">
+                    <img src="Foto\P13_up-koirinoya_720_540.jpg" alt="Водопад Верхний Койриноя">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P13_up-koirinoya-1_720_540.jpg" alt="Водопад Верхний Койриноя">
+                    <img src="Foto\P13_up-koirinoya-1_720_540.jpg" alt="Водопад Верхний Койриноя">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P14_lower-koirinoya_720_540.jpg" alt="Водопад Нижний Койриноя">
+                    <img src="Foto\P14_lower-koirinoya_720_540.jpg" alt="Водопад Нижний Койриноя">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P15_vidlici_720_540.jpg" alt="село Видлица">
+                    <img src="Foto\P15_vidlici_720_540.jpg" alt="село Видлица">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="..\..\Foto\P15_vidlici-1_720_540.jpg" alt="село Видлица">
+                    <img src="Foto\P15_vidlici-1_720_540.jpg" alt="село Видлица">
                 </div>
 
             </div>
