7-th commit, update for gadget

--- a/beauty.html
+++ b/beauty.html
@@ -39,9 +39,9 @@
         <div class="site_content_beauty zIndexBackground">
             <div class="maps">
                 <img id="maps-ladoga" src="assets/img/beauty_Ladoga_963x908-1.jpg" />
-
+                <img id="maps-ladoga-media" src="assets/img/beauty_Ladoga_963x908-2.jpg" />
                 <div class="point p1"> 
-                    <div class="about_point">
+                    <div class="about_point" id="p1-ruskeala">
                         <h3>Парк Рускеала</h3>
                         <img src="Foto\P1_ruskeala_720_540.jpg">
                         <a href="#p1" class="ui-link">Подробнее</a>
@@ -66,7 +66,7 @@
 
                 <div class="point p4">
                     <div class="about_point" id="p4-harlu">
-                        <h3>Пороги (гэс) <br/> в деревне Харлу</h3>
+                        <h3>Пороги (гэс) в деревне Харлу</h3>
                         <img src="Foto\P4_harlu.jpg">
                         <a href="#p4" class="ui-link">Подробнее</a>
                     </div>
