--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="site_content zIndexBackground">
             <div class="maps">
-                <img id="maps-ladoga" src="assets/img/route_around_Ladoga_m_963x908-1.jpg" />
+                <img class="round-ladoga"  id="maps-ladoga" src="assets/img/route_around_Ladoga_m_963x908-1.jpg"alt="Изображение карты Ладоги" />
                 <div class="point p0">
                     <div class="about_point" id="p0-stop-road">
                         <h3>Остановка в дороге</h3>
